Add Docker support

--- a/nginx-setup.conf
+++ b/nginx-setup.conf
@@ -1,19 +1,13 @@
 server {
 
-  listen 443 ssl;
+  listen 80;
 
-  ssl_certificate /etc/letsencrypt/live/shopsqueue.simonesestito.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/shopsqueue.simonesestito.com/privkey.pem;
-  include /etc/letsencrypt/options-ssl-nginx.conf;
-  ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-  server_name shopsqueue.simonesestito.com;
   root /var/www/shopsqueue/html;
 
-  location / {
+  error_log /var/log/nginx/error.log error;
 
-    include snippets/fastcgi-php.conf;
-    include /var/www/shopsqueue/secrets.conf;
+  location / {
+    include fastcgi.conf;
     
     fastcgi_param SCRIPT_FILENAME $document_root/index.php;
     fastcgi_param SCRIPT_NAME index.php;
@@ -23,6 +17,6 @@ server {
     fastcgi_pass_request_headers on;
     fastcgi_pass_header Authorization;
     
-    fastcgi_pass unix:/var/run/php/php7.2-fpm.sock;
+    fastcgi_pass php:9000;
   }
 }
